--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,5 +52,6 @@ uritemplate==4.2.0
 urllib3==2.6.2
 uuid_utils==0.12.0
 uvicorn==0.40.0
+python-dotenv==1.0.1
 websockets==15.0.1
 zstandard==0.25.0
