--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pydantic>=2.0.0
 # Document Processing
 pymupdf>=1.22.0     # Imported as fitz
 fpdf2>=2.7.4        # Modern FPDF implementation
+fpdf
 
 # AI & API Integration
 openai>=1.0.0       # OpenRouter compatible
