--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -56,4 +56,20 @@ python-dotenv==1.0.1
 websockets==15.0.1
 zstandard==0.25.0
 fpdf2==2.7.9
-openai==1.12.0
+fastapi==0.128.0
+uvicorn==0.40.0
+
+openai==1.56.0
+httpx==0.28.1
+requests==2.32.5
+
+PyMuPDF>=1.23.0
+fpdf2>=2.7.9
+python-dotenv>=1.0.1
+python-multipart>=0.0.21
+
+pydantic==2.12.5
+starlette==0.50.0
+orjson==3.11.5
+tenacity==9.1.2
+tqdm==4.67.1
